--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "nodemon": "nodemon lib/express/server.js",
     "transpile-server-files": "babel src/express -d lib/express --watch",
     "livereload": "node livereload.js",
-    "stylus": "stylus src/stylus/styles.styl -o assets/ -w",
+    "stylus": "stylus src/stylus/styles.styl -u autoprefixer-stylus -o assets/ -w",
     "dev": "parallelshell 'npm run transpile-server-files' 'npm run nodemon' 'npm run livereload' 'npm run stylus'"
   },
   "author": "",
@@ -19,6 +19,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^6.3.6",
+    "autoprefixer-stylus": "^0.9.2",
     "babel": "^6.5.2",
     "babel-cli": "^6.6.5",
     "babel-preset-es2015": "^6.6.0",
