nodemon only watch express dir

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "nodemon": "nodemon lib/express/server.js",
+    "nodemon": "nodemon lib/express/server.js --watch src/express",
     "transpile-server-files": "babel src/express -d lib/express --watch",
     "livereload": "node livereload.js",
     "make-js": "watchify -v -t babelify src/js/scripts.js -o assets/bundle.js",
