--- a/package.json
+++ b/package.json
@@ -10,14 +10,13 @@
     "make-js": "watchify -v -t babelify src/js/scripts.js -o assets/bundle.js",
     "stylus": "stylus src/stylus/styles.styl -u autoprefixer-stylus -o assets/ -w",
     "dev": "parallelshell 'npm run transpile-server-files' 'npm run nodemon' 'npm run livereload' 'npm run stylus' 'npm run make-js'"
-
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "express": "^4.13.4",
     "jade": "^1.11.0",
-    "react": "^0.14.8"
+    "react": "^15.1.0"
   },
   "devDependencies": {
     "autoprefixer": "^6.3.6",
@@ -26,6 +25,7 @@
     "babel-cli": "^6.6.5",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
+    "babelify": "^7.3.0",
     "live-reload": "^1.1.0",
     "livereload": "^0.4.1",
     "nodemon": "^1.9.1",
