--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
   "dependencies": {
     "express": "^4.13.4",
     "jade": "^1.11.0",
-    "react": "^15.1.0"
+    "react": "^15.2.0",
+    "react-dom": "^15.2.0"
   },
   "devDependencies": {
     "autoprefixer": "^6.3.6",
