--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "Dan Liu",
   "license": "MIT",
   "dependencies": {
+    "airtable": "^0.4.1",
     "express": "^4.13.4",
     "jade": "^1.11.0",
     "react": "^15.2.0",
